[tool.poetry]
name = "qel_simulation"
version = "0.1.0"
description = ""
authors = ["Nina Graves <graves@pads.rwth-aachen.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pygraphviz = "^1.13" # 1.11
multiset = "^3.1.0" # 3.0.1
sqlalchemy = "^2.0.32" # 2.0.25
binpacking = "^1.5.2"
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
